# CPMR3

./: .gitignore  LICENSE  README.md
catkin_ws/cpmr_apb/: CMakeLists.txt  README.md  package.xml
catkin_ws/cpmr_apb/scripts/: depopulate.py  populate.py
catkin_ws/cpmr_apb/urdf/: blockrobot.urdf
catkin_ws/cpmr_ch4/: CMakeLists.txt  README.md
catkin_ws/cpmr_ch4/launch/: gazebo-bumper.launch  gazebo-imu.launch  gazebo-laser.launch
catkin_ws/cpmr_ch4/scripts/: drive_to_hit.py
catkin_ws/cpmr_ch4/urdf/: scout-bumper.urdf.xacro  scout-imu.urdf.xacro  scout-laser.urdf.xacro  scout-sonar.urdf.xacro
catkin_ws/cpmr_ch5/: CMakeLists.txt
catkin_ws/cpmr_ch5/gazebo_models/target_APRILTAG_36H10_id0/: model.config  model.sdf
catkin_ws/cpmr_ch5/gazebo_models/target_APRILTAG_36H10_id1/: model.config
catkin_ws/cpmr_ch5/gazebo_models/target_APRILTAG_36H10_id2/: model.config
catkin_ws/cpmr_ch5/launch/: gazebo-camera.launch  gazebo-camera2.launch
catkin_ws/cpmr_ch5/scripts/: canny_edges.py  harris_corners.py  square_node.py  view_camera.py
catkin_ws/cpmr_ch5/urdf/: scout-camera.urdf.xacro
catkin_ws/cpmr_ch6/: CMakeLists.txt  README.md  package.xml
catkin_ws/cpmr_ch6/gazebo_models/road_plane/materials/scripts/: road_plane.material
catkin_ws/cpmr_ch6/scripts/: deploy.py
catkin_ws/cpmr_ch7/: package.xml
catkin_ws/cpmr_ch7/launch/: amcl.launch  move_base.launch
catkin_ws/cpmr_ch7/maps/: 10x10.pgm.raw
catkin_ws/cpmr_ch7/params/: costmap_common_params.yaml  local_costmap_params.yaml
cpmr_apb/: READ.ME
cpmr_apb/launch/: gazebo.launch  rviz.launch
cpmr_ch4/: READ.ME  package.xml
cpmr_ch4/launch/: gazebo-sonar.launch
cpmr_ch5/: READ.ME  package.xml
cpmr_ch5/gazebo_models/target_APRILTAG_36H10_id1/: model.sdf
cpmr_ch5/gazebo_models/target_APRILTAG_36H10_id2/: model.sdf
cpmr_ch5/gazebo_models/target_APRILTAG_36H10_id4/: model.sdf
cpmr_ch5/scripts/: aruco.py  good_features.py
cpmr_ch6/scripts/: drive_by_camera.py
cpmr_ch7/: CMakeLists.txt
cpmr_ch7/maps/: 10x10.pgm  10x10.yaml
cpmr_ch7/params/: base_local_planner_params.yaml  global_costmap_params.yaml
ros2_ws/: README.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/: README.md
ros2_ws/src/cpmr_apb/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_apb/cpmr_apb/: depopulate.py  populate.py
ros2_ws/src/cpmr_apb/launch/: blockrobot.launch.py  gazebo.launch.py
ros2_ws/src/cpmr_apb/urdf/: blockrobot.urdf
ros2_ws/src/cpmr_ch11/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_ch11/cpmr_ch11/: follow_chair.py  leader_chair.py
ros2_ws/src/cpmr_ch12/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_ch2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_ch4/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_ch5/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_ch6/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_ch7/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/cpmr_ch8/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/kinova_gen3/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/kinova_interfaces/: CMakeLists.txt  package.xml
(+121 files in other folders)
