<?xml version="1.0"?>
<package format="2">
  <name>cpmr_apb</name>
  <version>1.0.1</version>
  <description>
  The cpmr_ap2 package. This package provides
  models and other files associated with Appendix B of
  CPMR 3rd Edition.
  </description>

  <maintainer email="jenkin@yorku.ca">Michael Jenkin</maintainer>


  <license>GPLV2</license>


  <url type="website">http://michaeljenkin.info.yorku.ca</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
