<?xml version="1.0"?>
<package format="2">
  <name>cpmr_ch6</name>
  <version>0.0.1</version>
  <description>The cpmr_ch6 package</description>

  <maintainer email="jenkin@yorku.ca">jenkin</maintainer>


  <license>TODO</license>


  <url type="website">http://michaeljenkin.info.yorku.ca</url> 


  <author email="jenkin@yorku.ca">Michael Jenkin</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export> </export>
</package>
