<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpmr_apb</name>
  <version>0.3.0</version>
  <description>CPMR 3rd Edition Appendix B</description>
  <maintainer email="jenkin@yorku.ca">Michael Jenkin</maintainer>
  <license>MIT License</license>

  <depend>rclpy</depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
